[package]
name = "nng-sys"
version = "1.1.1-rc.1"
authors = ["Nathan Kent <nate@nkent.net>", "Jake W <jeikabu@gmail.com>"]

description = "Bindings to NNG (Nanomsg-Next-Generation) aka Nanomsg2"
keywords = ["nng", "nanomsg", "zeromq"]
categories = ["network-programming", "external-ffi-bindings", "os"]
license = "MIT"
repository = "https://github.com/jeikabu/nng-rust"
readme = "README.md"
edition = "2018"

[badges]
appveyor = { repository = "jake-ruyi/nng-rust", branch = "master", service = "github" }
travis-ci = { repository = "jeikabu/nng-rust", branch = "master" }

[features]
default = ["build-nng", "nng-stats"]

# Whether or not to build the NNG library
build-nng = []

# CMake generators
cmake-ninja = ["build-nng"]
cmake-vs2017 = ["build-nng"]
cmake-vs2017-win64 = ["build-nng"]

# NNG Options
nng-stats = ["build-nng"]
nng-tls = ["build-nng"]

[dependencies]
cty = "0.1"

[patch.crates-io]
cty = { git = 'https://github.com/jeikabu/cty' }

[build-dependencies]
cmake = "0.1"
bindgen = "0.47"

[package.metadata.docs.rs]
all-features = false
